# conflict-analysis-system

./: README.md  config.example.json  news_scraper_colab.ipynb  pyproject.toml  requirements.txt
.github/workflows/: scheduled_scrape.yml
dashboard/: dashboard.html
docs/: ARCHITECTURE.md  PIPELINE.md
news_scraper/: __init__.py  __main__.py  analysis.py  config.py  models.py  scraper.py  writer.py
tests/: test_pipeline.py
workflows/: scheduled_scrape  scheduled_scrape.yml
workflows/.github/.github/workflows/: ci.yml
